--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -2,6 +2,13 @@
 
 :root {
     --font-family: 'TikTokFont', san-serif;
+
+    --text-color: #2a2b3f;
+    --white-color: #fff;
+    --black-color: #16161d;
+
+    --btn-focus-color: #6d28d2;
+    --btn-focus-background-color: color-mix(in oklch, oklch(48.41% 0.2342 293.93deg) 12%, transparent);
 }
 
 * {
