--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -1,3 +1,77 @@
 .wrapper {
+    display: flex;
+    align-items: center;
     width: 100%;
+    block-size: 7.2rem;
+    writing-mode: horizontal-tb;
+    direction: ltr;
+    padding-block: 0;
+    padding-inline: 2.4rem;
+}
+
+.header-logo {
+    display: flex;
+    align-items: center;
+    padding-inline-end: 0.8rem;
+}
+
+.nav-search {
+    flex: 1;
+    min-inline-size: 18rem;
+    margin-inline: 1.2rem;
+    margin-block: 0;
+
+    //test
+    input {
+        width: 100%;
+    }
+}
+
+.nav-item {
+    a {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        block-size: 4rem;
+        padding-block: 0;
+        padding-inline: 1.2rem;
+        margin-block: 1.2rem;
+        margin-inline: 0;
+
+        font-size: 1.4rem;
+        font-weight: 400;
+        line-height: 1.6;
+        text-decoration: none;
+        color: var(--text-color);
+        white-space: nowrap;
+
+        &:hover {
+            color: var(--btn-focus-color);
+            background-color: var(--btn-focus-background-color);
+            border-radius: 0.4rem;
+        }
+    }
+
+    &:last-child a {
+        padding-inline: 0.4rem;
+    }
+
+    .nav-icon {
+        font-size: 1.8rem;
+    }
+
+    .avatar {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 3.2rem;
+        height: 3.2rem;
+        background-color: #333;
+        color: var(--white-color);
+        margin: 0.8rem;
+        font-weight: 600;
+        line-height: 1.2;
+        letter-spacing: 0;
+        border-radius: 50%;
+    }
 }
