build Header part 2

--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -6,6 +6,8 @@
     --text-color: #2a2b3f;
     --white-color: #fff;
     --black-color: #16161d;
+    --heading-color: #595c73;
+    --border-color: #d1d2e0;
 
     --btn-focus-color: #6d28d2;
     --btn-focus-background-color: color-mix(in oklch, oklch(48.41% 0.2342 293.93deg) 12%, transparent);
