--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -15,6 +15,31 @@
     padding-inline-end: 0.8rem;
 }
 
+.nav-explore {
+    position: relative;
+
+    .multi-nav-menu {
+        position: absolute;
+        top: 100%;
+        margin-block-start: 0.4rem;
+        display: none;
+    }
+
+    &:hover .multi-nav-menu {
+        display: block;
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 20px;
+        left: 0;
+        top: calc(100% - 1rem);
+    }
+}
+
 .nav-search {
     flex: 1;
     min-inline-size: 18rem;
@@ -28,7 +53,7 @@
 }
 
 .nav-item {
-    a {
+    .nav-link {
         display: inline-flex;
         align-items: center;
         justify-content: center;
@@ -52,10 +77,6 @@
         }
     }
 
-    &:last-child a {
-        padding-inline: 0.4rem;
-    }
-
     .nav-icon {
         font-size: 1.8rem;
     }
@@ -73,5 +94,13 @@
         line-height: 1.2;
         letter-spacing: 0;
         border-radius: 50%;
+    }
+
+    &:last-child a {
+        padding-inline: 0.4rem;
+    }
+
+    &:hover .nav-link {
+        color: var(--btn-focus-color);
     }
 }
