--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -40,6 +40,250 @@
     }
 }
 
+.nav-business {
+    position: relative;
+
+    .nav-business-wrapper {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        margin-block-start: 0.4rem;
+        display: none;
+    }
+
+    .nav-business-content {
+        min-inline-size: 28.8rem;
+        padding: 1.6rem;
+        text-align: center;
+    }
+    .nav-business-text {
+        font-weight: 700;
+        line-height: 1.2;
+        letter-spacing: 0;
+        margin-block-end: 1.6rem;
+    }
+
+    &:hover .nav-business-wrapper {
+        display: block;
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 20px;
+        left: 0;
+        top: calc(100% - 1rem);
+    }
+}
+
+.nav-teaching {
+    position: relative;
+
+    .nav-teaching-wrapper {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        margin-block-start: 0.4rem;
+        display: none;
+    }
+
+    .nav-teaching-content {
+        min-inline-size: 28.8rem;
+        padding: 1.6rem;
+        text-align: center;
+    }
+    .nav-teaching-text {
+        font-weight: 700;
+        line-height: 1.2;
+        letter-spacing: 0;
+        margin-block-end: 1.6rem;
+    }
+
+    &:hover .nav-teaching-wrapper {
+        display: block;
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 20px;
+        left: 0;
+        top: calc(100% - 1rem);
+    }
+}
+
+.nav-learning {
+    position: relative;
+
+    .nav-learning-wrapper {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        margin-block-start: 0.4rem;
+        display: none;
+    }
+
+    .nav-learning-content {
+        min-inline-size: 28.8rem;
+        padding: 1.6rem;
+        text-align: center;
+    }
+    .nav-learning-text {
+        font-weight: 700;
+        line-height: 1.2;
+        letter-spacing: 0;
+        margin-block-end: 1.6rem;
+    }
+
+    &:hover .nav-learning-wrapper {
+        display: block;
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 20px;
+        left: 0;
+        top: calc(100% - 1rem);
+    }
+}
+
+// header icon nav
+.nav-wishlist {
+    position: relative;
+
+    .nav-wishlist-wrapper {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        margin-block-start: 0.4rem;
+        display: none;
+    }
+
+    .nav-wishlist-content {
+        min-inline-size: 28.8rem;
+        padding: 1.6rem;
+        text-align: center;
+    }
+    .nav-wishlist-text {
+        font-weight: 400;
+        line-height: 1.2;
+        letter-spacing: 0;
+        margin-block-end: 1.6rem;
+    }
+
+    &:hover .nav-wishlist-wrapper {
+        display: block;
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 20px;
+        left: 0;
+        top: calc(100% - 1rem);
+    }
+}
+
+.nav-cart {
+    position: relative;
+
+    .nav-cart-wrapper {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        margin-block-start: 0.4rem;
+        display: none;
+    }
+
+    .nav-cart-content {
+        min-inline-size: 28.8rem;
+        padding: 1.6rem;
+        text-align: center;
+    }
+    .nav-cart-text {
+        font-weight: 400;
+        line-height: 1.2;
+        letter-spacing: 0;
+        margin-block-end: 1.6rem;
+    }
+
+    &:hover .nav-cart-wrapper {
+        display: block;
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 20px;
+        left: 0;
+        top: calc(100% - 1rem);
+    }
+}
+
+.nav-notify {
+    position: relative;
+
+    .nav-notify-wrapper {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        margin-block-start: 0.4rem;
+        display: none;
+    }
+
+    .nav-notify-content {
+        min-inline-size: 36rem;
+        padding: 1.6rem;
+        text-align: center;
+    }
+
+    .nav-notify-header {
+        display: flex;
+        justify-content: space-between;
+        margin-block-end: 3.2rem;
+    }
+
+    .nav-notify-heading {
+        font-weight: 700;
+    }
+
+    .nav-notify-setting {
+        padding: 0;
+        min-inline-size: unset;
+        inline-size: unset;
+    }
+    .nav-notify-text {
+        font-weight: 400;
+        line-height: 1.2;
+        letter-spacing: 0;
+    }
+
+    &:hover .nav-notify-wrapper {
+        display: block;
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 20px;
+        left: 0;
+        top: calc(100% - 1rem);
+    }
+}
+
 .nav-search {
     flex: 1;
     min-inline-size: 18rem;
@@ -73,7 +317,7 @@
         &:hover {
             color: var(--btn-focus-color);
             background-color: var(--btn-focus-background-color);
-            border-radius: 0.4rem;
+            border-radius: var(--btn-border-radius);
         }
     }
 
