--- a/src/layouts/components/MultiSubNavigationMenu/MultiSubNavigationMenu.module.scss
+++ b/src/layouts/components/MultiSubNavigationMenu/MultiSubNavigationMenu.module.scss
@@ -1,11 +1,3 @@
-.wrapper {
-    background-color: var(--white-color);
-    border-radius: 0.8rem;
-    box-shadow: 0 0 0 1px oklch(86.72% 0.0192 282.72deg),
-        0 2px 4px color-mix(in oklch, oklch(27.54% 0.1638 265.98deg) 8%, transparent),
-        0 4px 12px color-mix(in oklch, oklch(27.54% 0.1638 265.98deg) 8%, transparent);
-}
-
 .content {
     display: flex;
 }
@@ -70,4 +62,8 @@
 .link-icon {
     font-size: 0.8rem;
     align-self: center;
+}
+
+.active-link {
+    color: var(--btn-focus-color);
 }
