--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -10,6 +10,7 @@
     --white-color: #fff;
     --black-color: #16161d;
     --purple-color: #6d28d2;
+    --gray-color: #9194ac;
 
     --btn-focus-color: #6d28d2;
     --btn-focus-background-color: color-mix(in oklch, oklch(48.41% 0.2342 293.93deg) 12%, transparent);
