build Home part 1

--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -10,6 +10,7 @@
     --white-color: #fff;
     --black-color: #16161d;
     --purple-color: #6d28d2;
+    --light-purple-color: #d2caff;
     --gray-color: #9194ac;
 
     --btn-focus-color: #6d28d2;
