--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -23,6 +23,8 @@
         top: 100%;
         margin-block-start: 0.4rem;
         display: none;
+
+        z-index: 9;
     }
 
     &:hover .multi-nav-menu {
@@ -49,6 +51,8 @@
         right: 0;
         margin-block-start: 0.4rem;
         display: none;
+
+        z-index: 9;
     }
 
     .nav-business-content {
@@ -87,6 +91,8 @@
         right: 0;
         margin-block-start: 0.4rem;
         display: none;
+
+        z-index: 9;
     }
 
     .nav-teaching-content {
@@ -125,6 +131,8 @@
         right: 0;
         margin-block-start: 0.4rem;
         display: none;
+
+        z-index: 9;
     }
 
     .nav-learning-content {
@@ -164,6 +172,8 @@
         right: 0;
         margin-block-start: 0.4rem;
         display: none;
+
+        z-index: 9;
     }
 
     .nav-wishlist-content {
@@ -202,6 +212,8 @@
         right: 0;
         margin-block-start: 0.4rem;
         display: none;
+
+        z-index: 9;
     }
 
     .nav-cart-content {
@@ -240,6 +252,8 @@
         right: 0;
         margin-block-start: 0.4rem;
         display: none;
+
+        z-index: 9;
     }
 
     .nav-notify-content {
