build Home part 2

--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -16,6 +16,7 @@
     --btn-focus-color: #6d28d2;
     --btn-focus-background-color: color-mix(in oklch, oklch(48.41% 0.2342 293.93deg) 12%, transparent);
     --primary-btn-focus-background-color: #892de1;
+    --btn-focus-light-background-color: #e9eaf2;
 
     --btn-border-radius: 0.4rem;
 }
