--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
     box-shadow: 0 2px 4px rgba(6, 17, 118, 0.08), 0 4px 12px rgba(6, 17, 118, 0.08);
     position: relative;
+    z-index: 1;
 }
 
 .nav-container {
