--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -2,6 +2,75 @@
     background: var(--white-color);
 }
 
+.home-container {
+    inline-size: 100%;
+    max-inline-size: 134rem;
+    margin-inline: auto;
+    padding-inline: 2.4rem 2.4rem;
+}
+
+.home-content {
+    container-type: inline-size;
+    container-name: ud-content-area;
+    inline-size: 100%;
+}
+
+.banner-container {
+    inline-size: 100vi; //viewport inline
+    position: relative;
+    inset-inline: 50%;
+    margin-inline: -50vi;
+}
+
+.welcome-area {
+    display: flex;
+    background-color: transparent;
+    inline-size: 100%;
+    max-inline-size: 134rem;
+    margin-inline: auto;
+    padding: 3.2rem;
+}
+
+.default-avatar {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    object-fit: cover;
+    border-radius: 100rem;
+    color: var(--white-color);
+    background-color: var(--black-color);
+    font-size: 2.4rem;
+    font-weight: 600;
+    line-height: 1.1;
+}
+
+.user-detail {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-inline-start: 2.4rem;
+    word-break: normal;
+    overflow-wrap: anywhere;
+}
+
+.welcome-heading {
+    font-size: 2.4rem;
+    font-weight: 600;
+    line-height: 1.1;
+    max-inline-size: 36em;
+}
+
+.welcome-btn {
+    margin-block-start: 0.8rem;
+
+    button,
+    a {
+        padding-inline: 0 1.6rem;
+    }
+}
+
 .banner-float-content {
     padding: 2.4rem;
     background-color: var(--white-color);
