build Home part 4

--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -12,11 +12,14 @@
     --purple-color: #6d28d2;
     --light-purple-color: #d2caff;
     --gray-color: #9194ac;
+    --ribbon-color: #0d5261;
+    --dark-green-color: #206241;
 
     --btn-focus-color: #6d28d2;
     --btn-focus-background-color: color-mix(in oklch, oklch(48.41% 0.2342 293.93deg) 12%, transparent);
     --primary-btn-focus-background-color: #892de1;
     --btn-focus-light-background-color: #e9eaf2;
+    --ribbon-background-color: #c2e9eb;
 
     --btn-border-radius: 0.4rem;
 }
