--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -102,3 +102,29 @@
         font-weight: 400;
     }
 }
+
+// page container
+.page-container {
+    padding-block-start: 0;
+    padding-block-end: 4.8rem;
+    inline-size: 100%;
+    max-inline-size: 134rem;
+    margin-inline: auto;
+    padding-inline: 2.4rem 2.4rem;
+}
+
+.page-advertising {
+    padding: 2.4rem;
+}
+
+.courses-section {
+    margin-block-start: 4.8rem;
+}
+
+.courses-heading {
+    margin-block-end: 2.4rem;
+    max-inline-size: 36em;
+    font-size: 3.2rem;
+    font-weight: 600;
+    line-height: 1.1;
+}
