build Home part 5

--- a/src/components/CourseCard/CourseCard.module.scss
+++ b/src/components/CourseCard/CourseCard.module.scss
@@ -1,5 +1,10 @@
 .wrapper {
-    background-color: transparent;
+    cursor: pointer;
+
+    &:hover .course-img img {
+        transition: opacity linear 100ms;
+        opacity: 0.8;
+    }
 }
 
 .course-card-wrapper {
