--- a/src/components/CardCarousel/CardCarousel.module.scss
+++ b/src/components/CardCarousel/CardCarousel.module.scss
@@ -78,6 +78,10 @@
         grid-auto-flow: row;
         grid-auto-columns: 100%;
     }
+
+    .btn {
+        display: none;
+    }
 }
 
 @media screen and (min-width: 37.5625rem) {
