--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -114,7 +114,27 @@
 }
 
 .page-advertising {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     padding: 2.4rem;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    border-radius: 1.6rem;
+    user-select: none;
+
+    span:first-child {
+        font-size: 1.4rem;
+        font-weight: 600;
+        line-height: 1.2;
+    }
+
+    span:last-child {
+        margin-inline: 0.4rem 0.8rem;
+        font-size: 1.4rem;
+        font-weight: 400;
+        line-height: 1.6;
+    }
 }
 
 .courses-section {
